--- a/js_sandbox/index.html
+++ b/js_sandbox/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Javascript Sandbox - Section 2</h1>
-  <script src="app.js">alert('Hello');</script>
+  <script src="app.js"></script>
 </body>
 </html>
